src/objects/Swap_Configuration__c.object
<CustomObject>
    <description>Junction Object used to configure rate plans swapping functionality, for Swap, Upgrade and Suggestions</description>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <description>Represents the type of relationship. It can either require to &quot;Swap&quot;, &quot;Upgrade&quot;, &quot;Suggestion&quot; Product Rate Plan Information</description>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Product_Rate_Plan_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source rate plan before swapping</description>
        <inlineHelpText>Source rate plan before swapping</inlineHelpText>
        <label>Source Product Rate Plan Information</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>$Source.Relationship_Type__c</field>
                <operation>equals</operation>
                <value>Swap</value>
            </filterItems>
            <filterItems>
                <field>$Source.Relationship_Type__c</field>
                <operation>equals</operation>
                <value>Upgrade</value>
            </filterItems>
            <filterItems>
                <field>Product_Rate_Plan_Information__c.Related_Product_Information__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Rate_Plan_Information__c</referenceTo>
        <relationshipLabel>Swapping Configuration (Source Rate Plan)</relationshipLabel>
        <relationshipName>Swapping_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Product_Rate_Plan_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Target Rate Plan after Swapping</inlineHelpText>
        <label>Target Product Rate Plan Information</label>
        <referenceTo>Product_Rate_Plan_Information__c</referenceTo>
        <relationshipLabel>Swapping Configuration (Target Rate Plan)</relationshipLabel>
        <relationshipName>Swapping_Configuration1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Swapping Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Type__c</columns>
        <columns>Source_Product_Rate_Plan_Information__c</columns>
        <columns>Target_Product_Rate_Plan_Information__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Swap Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swapping Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IECSwappingTargetRatePlanValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(Target_Product_Rate_Plan_Information__r.Related_Product_Information__r.Related_Product_Category__c &lt;&gt;  Source_Product_Rate_Plan_Information__r.Related_Product_Information__r.Related_Product_Category__c,  ISPICKVAL(Target_Product_Rate_Plan_Information__r.Related_Product_Information__r.Product_Audience__c, &apos;Default&apos;))
,  ISPICKVAL(Relationship_Type__c, &apos;Swap&apos;)
)</errorConditionFormula>
        <errorDisplayField>Target_Product_Rate_Plan_Information__c</errorDisplayField>
        <errorMessage>For Swapping: Target Rate Plan must be associated to the Same Product Category of the Source Product Rate Plan and must not be part of any Default Product Audience Rate Plans</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Upgrade_plan_must_be_to_Unlimited</fullName>
        <active>true</active>
        <description>Only upgrade to an Unlimited rate plan is supported.</description>
        <errorConditionFormula>AND (
	ISPICKVAL(Relationship_Type__c, &apos;Upgrade&apos;)
	, OR(
		Target_Product_Rate_Plan_Information__r.Subscription_Usage_Qty__c &gt; 0
		, Target_Product_Rate_Plan_Information__r.Is_Triable__c
	)
)</errorConditionFormula>
        <errorDisplayField>Target_Product_Rate_Plan_Information__c</errorDisplayField>
        <errorMessage>Target upgrade rate plan must only be unlimited.</errorMessage>
    </validationRules>
</CustomObject>